--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-	"name": "pablo-sg-pacheco/wp-namespace-autoloader",
+	"name": "mylawacad/wp-namespace-autoloader",
+	"version": "1.0.0",
 	"type": "library",
 	"description": "A PHP autoloader class that follows the WordPress coding standards for class names and class filenames",
 	"keywords": [
